<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="stepDescriptionItem" type="com.udacity.pk.bakingapp.viewmodels.StepDescriptionViewModel"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:visibility="@{stepDescriptionItem.getExoPlayerVisibility()}"
                android:id="@+id/exoPlayer"/>
        <ImageView android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="0.7"
                   android:visibility="@{stepDescriptionItem.getThumbnailVisibility()}"
                   app:thumbNailUrl="@{stepDescriptionItem.getThumbnailUrl()}"
                   android:id="@+id/thumbnail"/>


        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stepDescriptionCard"
                android:layout_margin="16dp"
                android:layout_weight="0.3">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/descriptionTitle"
                        android:text="@string/step_instruction_title"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="20sp"
                        android:textColor="@color/cardview_light_background"
                        android:background="@color/colorSecondaryLight"
                        android:textStyle="bold"/>

                <ScrollView android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fillViewport="true">
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="vertical">

                        <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1">
                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/stepDescription"
                                    android:padding="8dp"
                                    android:text="@{stepDescriptionItem.getStepDescription()}"/>
                        </FrameLayout>

                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="16dp">
                            <Button android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:visibility="@{stepDescriptionItem.getPreviousButtonVisibility()}"
                                    android:id="@+id/previousStep"
                                    android:text="@string/previous_button"
                                    android:layout_alignParentTop="true"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginStart="26dp"/>
                            <Button android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:visibility="@{stepDescriptionItem.getNextButtonVisibility()}"
                                    android:id="@+id/nextStep"
                                    android:text="@string/next_button"
                                    android:layout_gravity="end" android:layout_alignParentTop="true"
                                    android:layout_alignParentEnd="true"
                                    android:layout_marginEnd="18dp"/>
                        </RelativeLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>